--- a/packages/stencil-lib/src/index.html
+++ b/packages/stencil-lib/src/index.html
@@ -337,36 +337,43 @@
 
     <inno-footer variant="dark" copyright="@ Innomotics 2024">
       <inno-footer-item>
-        <inno-button variant="secondary" icon="arrow-right" color-variant="light">tertiary button</inno-button>
+        <a>Corporate Information</a>
       </inno-footer-item>
-      <inno-footer-item><p>Corporate Information</p></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
-      <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
-      <inno-footer-item><a>Term of use</a></inno-footer-item>
-      <inno-footer-item><a>Whistleblowing</a></inno-footer-item>
-      <inno-footer-item><inno-icon icon="about" theme="dark"></inno-icon></inno-footer-item>
+      <inno-footer-item>
+        <a>Privacy Notice</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <a>Cookie Notice</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <a>Term of use</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <a>Whistleblowing</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <inno-icon icon="about" theme="dark"></inno-icon>
+      </inno-footer-item>
     </inno-footer>
 
     <div class="separator-dummy">separator dummy</div>
 
     <inno-footer variant="light" copyright="@ Innomotics 2024">
       <inno-footer-item>
-        <inno-button variant="secondary" icon="arrow-right" color-variant="light">tertiary button</inno-button>
+        <a>Corporate Information</a>
       </inno-footer-item>
-      <inno-footer-item><a>Corporate Information</a></inno-footer-item>
-      <inno-footer-item><a>Privacy Notice</a></inno-footer-item>
-      <inno-footer-item><a>Cookie Notice</a></inno-footer-item>
-      <inno-footer-item><a>Term of use</a></inno-footer-item>
-      <inno-footer-item><a>Whistleblowing</a></inno-footer-item>
+      <inno-footer-item>
+        <a>Privacy Notice</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <a>Cookie Notice</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <a>Term of use</a>
+      </inno-footer-item>
+      <inno-footer-item>
+        <a>Whistleblowing</a>
+      </inno-footer-item>
       <inno-footer-item>
         <inno-icon icon="about" theme="dark"></inno-icon>
       </inno-footer-item>
